migrate `getData` to `uiDataSnapshot`: platform
GitOrigin-RevId: d61a393ffadb50ccadae880d30a75d362b2e2258