@@ -3,9 +3,9 @@ package com.intellij.find.actions;
 
 import com.intellij.ide.util.gotoByName.ModelDiff;
 import com.intellij.openapi.actionSystem.CommonDataKeys;
-import com.intellij.openapi.actionSystem.DataProvider;
+import com.intellij.openapi.actionSystem.DataSink;
 import com.intellij.openapi.actionSystem.LangDataKeys;
-import com.intellij.openapi.actionSystem.PlatformCoreDataKeys;
+import com.intellij.openapi.actionSystem.UiDataProvider;
 import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.popup.util.PopupUtil;
@@ -28,7 +28,6 @@ import com.intellij.util.ui.ColumnInfo;
 import com.intellij.util.ui.JBUI;
 import com.intellij.util.ui.ListTableModel;
 import org.jetbrains.annotations.Contract;
-import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -42,9 +41,8 @@ import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
-public final class ShowUsagesTable extends JBTable implements DataProvider {
+public final class ShowUsagesTable extends JBTable implements UiDataProvider {
   final Usage MORE_USAGES_SEPARATOR = new UsageAdapter();
   final Usage USAGES_OUTSIDE_SCOPE_SEPARATOR = new UsageAdapter();
   final Usage USAGES_FILTERED_OUT_SEPARATOR = new UsageAdapter();
@@ -68,28 +66,16 @@ public final class ShowUsagesTable extends JBTable implements DataProvider {
   }
 
   @Override
-  public Object getData(@NotNull @NonNls String dataId) {
-    if (LangDataKeys.POSITION_ADJUSTER_POPUP.is(dataId)) {
-      return PopupUtil.getPopupContainerFor(this);
-    }
-    if (UsageView.USAGE_VIEW_KEY.is(dataId)) {
-      return myUsageView;
-    }
-    if (PlatformCoreDataKeys.BGT_DATA_PROVIDER.is(dataId)) {
-      List<Object> selection = Arrays.stream(getSelectedRows())
-        .mapToObj(o -> getValueAt(o, 0))
-        .collect(Collectors.toList());
-      return (DataProvider)slowId -> getSlowData(slowId, selection);
-    }
-    return null;
-  }
-
-  private static @Nullable Object getSlowData(@NotNull String dataId, @NotNull List<Object> selection) {
-    if (CommonDataKeys.PSI_ELEMENT.is(dataId)) {
+  public void uiDataSnapshot(@NotNull DataSink sink) {
+    sink.set(LangDataKeys.POSITION_ADJUSTER_POPUP, PopupUtil.getPopupContainerFor(this));
+    sink.set(UsageView.USAGE_VIEW_KEY, myUsageView);
+    List<Object> selection = Arrays.stream(getSelectedRows())
+      .mapToObj(o -> getValueAt(o, 0))
+      .toList();
+    sink.lazy(CommonDataKeys.PSI_ELEMENT, () -> {
       Object single = ContainerUtil.getOnlyItem(selection);
       return single == null ? null : getPsiElementForHint(single);
-    }
-    return null;
+    });
   }
 
   @Override
